test/errors/scope-resolution/useImportUnknownMod.chpl
module M {
  var a : int = 3;
}

module N {
  import X.b;

  proc main() {
    writeln("here");
  }
}
