test/errors/scope-resolution/useImportUnknownMod.1.good
useImportUnknownMod.chpl:5: In module 'N':
useImportUnknownMod.chpl:6: error: cannot find module named 'X'
